<resources>
    <string name="app_name">Japanese Place Names Quiz</string>
    <string name="congratz">Congratulations!!!</string>
    <string name="dummy">Dummy text</string>
    <string name="nextQuestion">Next Question</string>
    <string name="banner_home_footer">ca-app-pub-4998476997909861/5765130175</string>
    <string name="quiz">Quiz</string>
    <string name="quizNumOfCorrectAns">You answered %d out of 10 correctly.</string>
    <string name="tryAgain">Try Again</string>
    <string name="continueQuiz">Continue</string>
    <string name="currentQuesNum">%d of %d</string>
    <string name="restartQuiz">Do it again !</string>

    <string-array name="questionModes">
        <item>Select a mode</item>
        <item>Kanji to English</item>
        <item>English to Kanji</item>
        <item>Kanji to Hiragana</item>
    </string-array>

    <string-array name="categories">
        <item>All</item>
        <item>Airports</item>
        <item>Cities</item>
        <item>Prefectures</item>
        <item>Countries</item>
    </string-array>

</resources>
