<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context="com.lanka_guide.japaneseplacenamesquiz.QuizActivity">

    <RelativeLayout
        android:id="@+id/question_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/questionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="end"
            android:text="1 of 10"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:gravity="center"
            android:text="Question"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/hiragana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="Answer"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/quizResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="#07ffffff"
            android:gravity="center"
            android:text="@string/congratz"
            android:textColor="#ff0022"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/quizTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quizResult"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/dummy"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">


        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/answer_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:columnCount="1">

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/option1"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:onClick="clickAnswer"/>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/option2"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:onClick="clickAnswer"/>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/option3"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:onClick="clickAnswer"/>

            <Button xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/option4"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:onClick="clickAnswer"/>
        </GridLayout>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/tryAgainButton"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/answer_grid"
            android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="clickTryAgain"
                android:text="@string/tryAgain"
                android:visibility="gone"/>

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/continueButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answer_grid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="clickContinue"
            android:text="@string/continueQuiz"
            android:visibility="gone" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/restartButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answer_grid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:onClick="clickRestart"
            android:text="@string/restartQuiz"
            android:visibility="gone" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/nextButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answer_grid"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="#7f9a9b"
            android:onClick="clickNextQuestion"
            android:text="@string/nextQuestion"
            android:visibility="gone"/>
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/quizAdView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer">
    </com.google.android.gms.ads.AdView>

</LinearLayout>